# TeleGPT

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  boot.sh  config.example.json  crates.js  docker-compose.yml  help.html  search-index.js  settings.html  source-files.js
.github/workflows/: docker-publish.yml
implementors/core/clone/: trait.Clone.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/deref/: trait.Deref.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/serde/de/: trait.Deserialize.js
src/: app.rs  comp_mgr.rs  config.rs  conversation.rs  database.rs  dispatcher.rs  lib.rs  main.rs  module_mgr.rs  types.rs
src/chat/: mod.rs  session_mgr.rs
src/modules/: config.rs  mod.rs  openai.rs
src/modules/admin/: handler_filter.rs  member_mgr.rs  mod.rs
src/modules/chat/: braille.rs  markdown.rs  mod.rs  openai_client.rs  session.rs  session_mgr.rs
src/modules/dalle/: mod.rs
src/modules/prefs/: mod.rs  prefs_mgr.rs
src/modules/stats/: db_provider.rs  mod.rs  stats_mgr.rs
src/telegpt_core/: app.rs.html  config.rs.html  database.rs.html  dispatcher.rs.html  lib.rs.html  module_mgr.rs.html  types.rs.html
src/telegpt_core/modules/: config.rs.html  mod.rs.html
src/telegpt_core/modules/admin/: member_mgr.rs.html  mod.rs.html
src/telegpt_core/utils/: dptree_ext.rs.html  mod.rs.html  stream_ext.rs.html
src/utils/: dptree_ext.rs  mod.rs  stream_ext.rs
telegpt_core/: all.html  index.html  sidebar-items.js
telegpt_core/app/: fn.run.html  index.html  sidebar-items.js
telegpt_core/config/: index.html  sidebar-items.js  struct.Config.html  struct.I18nStrings.html  struct.SharedConfig.html
(+9 files in other folders)
