[package]
name = "telegpt"
version = "0.1.0"
edition = "2021"

[lib]
name = "telegpt_core"
path = "src/lib.rs"

[[bin]]
name = "telegpt"
path = "src/main.rs"
doc = false

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
async-openai = "0.8"
tokio = { version = "1", features = ["full"] }
rusqlite = "0.28"
anyhow = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
paste = "1.0"
clap = { version = "4.0", features = ["derive"] }